reverted back to custom styling, fixed BS imports. still not responsive

--- a/src/index.css
+++ b/src/index.css
@@ -14,25 +14,18 @@ body {
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
-/* .button {
-  border: 0;
-  padding: 0.5rem;
-  border-radius: 0.7rem;
-  background-color: var(--green);
-  color: white;
-}
-
 .btn-search {
   margin-left: 0.7rem;
   padding-left: 1rem;
   padding-right: 1rem;
   font-weight: bold;
-} */
+}
 
 .search-bar {
   border: none;
   padding: 0.5rem 0.6rem;
   border-radius: 0.7rem;
+  width: 30rem;
   background-color: #eeee;
 }
 .recipe-list-item {
